Tried to fill some content
added a news and changed the titles

--- a/Project/aboutus.html
+++ b/Project/aboutus.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styleAboutus.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Couch Betting - About Us</title>
 </head>
 <body>
     <nav>
@@ -42,8 +42,8 @@
             </ul>
             <p class ="hints">Click on the image to get to the offical premier league website</p>
         </section>
-        <a href = "https://www.premierleague.com/"><img class = "pictures" id = "pllogo" src="Images/pllogo.png" alt="premiere league logo" ></a>
-        <a href = "https://fantasy.premierleague.com/help/rules"><img class = "pictures" id = "fllogo" src="Images/fllogo.png" alt="fantasy league logo" ></a>
+        <a href = "https://www.premierleague.com/"><img class = "mediuamPictures" src="Images/pllogo.png" alt="premiere league logo" ></a>
+        <a href = "https://fantasy.premierleague.com/help/rules"><img class = "mediumPictures" src="Images/fllogo.png" alt="fantasy league logo" ></a>
         <section>
             <h1>Betting</h1>
             <p>The betting is 100% free you only need to log in to get your website-points.</p>
