--- a/Project/news.html
+++ b/Project/news.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Document</title>
+    <title>Couch Betting - News</title>
 </head>
 <body>
     <nav>
@@ -28,14 +28,14 @@
         </div>
         <div id="grid-item-right">
             <h1>Sports News</h1>
-            <p>Welcome to the news part of our website. Here you will find the latest and greatest news surroundg the premier leauge and everything related to it.</p>
+            <p>Welcome to the news page. Here you will find the latest and greatest news surroundg the premier leauge and everything related to it.</p>
             <p>Our format will imitate that of a newspapper with the most important news on the top. News are going to change in a 48-hour cycle. All our news are going to come from an API</p>   
             <p>If you wish to know more, here is a link to the officel website of the <a href="https://www.premierleague.com/" target="_blank">Premier Leauge</a>.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, neque nam? Hic officiis dolor exercitationem laudantium mollitia laboriosam dolorum, facere ipsum, suscipit doloribus rem atque eveniet, quia explicabo officia amet.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, quam delectus! Veritatis officiis alias, laboriosam dignissimos exercitationem fugit illum sequi consequatur. Ducimus magnam ipsam non nam asperiores aspernatur ipsa recusandae!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, quam delectus! Veritatis officiis alias, laboriosam dignissimos exercitationem fugit illum sequi consequatur. Ducimus magnam ipsam non nam asperiores aspernatur ipsa recusandae!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, quam delectus! Veritatis officiis alias, laboriosam dignissimos exercitationem fugit illum sequi consequatur. Ducimus magnam ipsam non nam asperiores aspernatur ipsa recusandae!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, quam delectus! Veritatis officiis alias, laboriosam dignissimos exercitationem fugit illum sequi consequatur. Ducimus magnam ipsam non nam asperiores aspernatur ipsa recusandae!</p>
+            <section>
+                <img class = "TopNewsPictures" src="Images/RonaldoNews.jpg" alt="picture of Ronalod in a Man Utd shirt">
+                <h4>Cristiano Ronaldo sitzt im Top-Spiel beim FC Chelsea lange nur auf der Bank</h4>
+                <p>Michael Carrick, der als Interimstrainer sein letztes Spiel für Manchester United leiten soll, verbannte den 36 Jahre alte Portugiesen auf die Bank, nachdem dieser am vergangenen Mittwoch noch das erlösende 1:0-beim Auswärtssieg in Villarreal erzielt hatte.</p>
+            </section>
         </div>
     </div>
 </body>
