changed the design
made some changes and put a new picture

--- a/Project/aboutus.html
+++ b/Project/aboutus.html
@@ -42,7 +42,7 @@
             </ul>
             <p class ="hints">Click on the image to get to the offical premier league website</p>
         </section>
-        <a href = "https://www.premierleague.com/"><img class = "mediuamPictures" src="Images/pllogo.png" alt="premiere league logo" ></a>
+        <a href = "https://www.premierleague.com/"><img class = "mediumPictures" src="Images/PL.jpg" alt="premiere league logo" ></a>
         <a href = "https://fantasy.premierleague.com/help/rules"><img class = "mediumPictures" src="Images/fllogo.png" alt="fantasy league logo" ></a>
         <section>
             <h1>Betting</h1>
