Light Blue and Font Changes (small*)

--- a/Project/news.html
+++ b/Project/news.html
@@ -23,8 +23,8 @@
     </nav>
    <div class="grid-container">
         <div id="grid-item-left">
-            <h1>Test</h1>
-            <p>Test vs Test</p>
+            <h1>Quick News</h1>
+            <p>Manchester United vs Liverpool</p>
         </div>
         <div id="grid-item-right">
             <h1>Sports News</h1>
