Login Signup changes

--- a/Project/login.html
+++ b/Project/login.html
@@ -14,7 +14,7 @@
             <h1 class="login-Side-Content" id="login-Side-Header">Welcome Back!</h1>
             <p class="login-Side-Content login-Side-Paragraph">To keep connected with us please </p> 
             <p class="login-Side-Content login-Side-Paragraph">with your personal info</p>
-            <button class="login-Side-Content" id="login-Side-Button" onclick="window.location.href = 'signup.html';">SIGN IN</button>
+            <button class="login-Side-Content" id="login-Side-Button" onclick="window.location.href = 'signup.html';">Login</button>
         </div>
 
         <div id="login-Main">
@@ -25,7 +25,7 @@
             <input class="login-Main-Input" type="text" name="email" placeholder="Email"><br>
             <input class="login-Main-Input" type="password" name="password" placeholder="Password"><br><br>
 
-            <button class="login-Side-Content" id="login-Main-Button">SIGN UP</button>
+            <button class="login-Side-Content" id="login-Main-Button">Sign Up</button>
         </div>
     </div>
 
