--- a/Project/signup.html
+++ b/Project/signup.html
@@ -15,8 +15,8 @@
         
             <input class="signup-Main-Input" type="text" name="email" placeholder="Email"><br>
             <input class="signup-Main-Input" type="password" name="password" placeholder="Password"><br><br>
-            <p id="forgot-Password">Forgot your password?</p>
-            <button class="signup-Side-Content" id="signup-Main-Button">SIGN UP</button>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" id="forgot-Password">Forgot your password?</a>
+            <button class="signup-Side-Content" id="signup-Main-Button">Login</button>
         </div>
 
     
@@ -24,7 +24,7 @@
             <h1 class="signup-Side-Content" id="signup-Side-Header">Hello, Friend!</h1>
             <p class="signup-Side-Content signup-Side-Paragraph">Enter your personal details</p> 
             <p class="signup-Side-Content signup-Side-Paragraph">and start your jorney with us</p>
-            <button class="signup-Side-Content" id="signup-Side-Button" onclick="window.location.href = 'login.html';">SIGN UP</button>
+            <button class="signup-Side-Content" id="signup-Side-Button" onclick="window.location.href = 'login.html';">Sign Up</button>
         </div>
 
     </div>
