--- a/Project/news.html
+++ b/Project/news.html
@@ -16,8 +16,8 @@
             <li class="navSpace"><a class="navText" href="fantasyLeauge.html">Fantasy Leauge</a></li>
             <li class="navSpace"><a class="navText" href="gamePredicition.html">Game Predicitions</a></li>
             <li class="navSpace"><a class="navText" href="aboutus.html">About Us</a></li>
-            <li class="navSpaceRightBound"><a id="signup" href="signup.html">Sign Up</a></li>
-            <li class="navSpaceRightBound"><a id="login" href="login.html">Login</a></li>
+            <li class="navSpaceRightBound"><a id="signup" href="login.html">Sign Up</a></li>
+            <li class="navSpaceRightBound"><a id="login" href="signup.html">Login</a></li>
             
         </ul> 
     </nav>
