added a new and more individuale color scheme

--- a/Project/aboutus.html
+++ b/Project/aboutus.html
@@ -33,8 +33,8 @@
             </div>
             <div class="profiles border-background ">
                 <h1>Arsim's profile</h1>
-                <p>...<a href="https://github.com/AlbertoSacilotto"><img class="smallPfp" src="" alt=""></a></p>
-                <p>...<a href="https://github.com/AlbertoSacilotto"><img class="smallPfp" src="" alt=""></a></p>
+                <p>...<a href=""><img class="smallPfp" src="" alt=""></a></p>
+                <p>...<a href=""><img class="smallPfp" src="" alt=""></a></p>
             </div>
             <div class="profiles border-background">
                 <h1>Yanis' profile</h1>
