--- a/Project/index.html
+++ b/Project/index.html
@@ -19,9 +19,56 @@
             <li class="navSpace"><a class="navText" href="aboutus.html">About Us</a></li>
             <li class="navSpaceRightBound"><a id="signup" href="login.html">Sign Up</a></li>
             <li class="navSpaceRightBound"><a id="login" href="signup.html">Login</a></li>
-            
         </ul>
     </nav>
-    
+    <article id="gridHome">
+        <div id ="NewsColumn">
+            <h1>Current Top News</h1>
+            <div class="NewsInHome">
+                <h3>Headline</h3>
+                <img src="" alt="News image">
+                <p>description</p>
+            </div>
+            <div class="NewsInHome">
+                <h3>Headline</h3>
+                <img src="" alt="News image">
+                <p>description</p>
+            </div>
+            <div class="NewsInHome">
+                <h3>Headline</h3>
+                <img src="" alt="News image">
+                <p>description</p>
+            </div>
+        </div>
+        <div id="Home">
+            <div>
+                <h1>Home</h1>
+                <p>Hello</p>
+            </div>
+        </div>
+        <div id="LiveGamesColumn">
+            <h1>Live Games Score</h1>
+            <div class="LiveGamesInHome">
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Current Minute</p>
+            </div>
+            <div class="LiveGamesInHome">
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Current Minute</p>
+            </div>
+            <div class="LiveGamesInHome">
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Current Minute</p>
+            </div>
+            <div class="LiveGamesInHome">
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Current Minute</p>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
