added a better but unfinished Games page

--- a/Project/games.html
+++ b/Project/games.html
@@ -22,5 +22,61 @@
             
         </ul>
     </nav>
+    <article id="gridGames">
+        <section id="Games">
+            <h1>Last played</h1>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+        </section>
+        <section id="Playing">
+            <h1>Last played</h1>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+        </section>
+        <section id="Upcoming">
+            <h1>Last played</h1>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h3>Team1 - Team2</h3>
+                <h4>Score : Score</h4>
+                <p>Minutes played</p>
+            </div>
+        </section>
+    </article>
 </body>
 </html>
