--- a/Project/games.html
+++ b/Project/games.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+    <title>CouchBetting - Games</title>
 </head>
 <body>
     <nav>
@@ -15,7 +15,7 @@
             <li class="navSpace"><a class="navText" href="games.html">Games</a></li>
             <li class="navSpace"><a class="navText" href="news.html">News</a></li> 
             <li class="navSpace"><a class="navText" href="fantasyLeauge.html">Fantasy Leauge</a></li>
-            <li class="navSpace"><a class="navText" href="gamePredicition.html">Game Predicitions</a></li>
+            <li class="navSpace"><a class="navText" href="gamePredicition.html">Betting</a></li>
             <li class="navSpace"><a class="navText" href="aboutus.html">About Us</a></li>
             <li class="navSpaceRightBound"><a id="signup" href="login.html">Sign Up</a></li>
             <li class="navSpaceRightBound"><a id="login" href="signup.html">Login</a></li>
@@ -23,8 +23,9 @@
         </ul>
     </nav>
     <article id="gridGames">
-        <section id="Games">
-            <h1>Last played</h1>
+        
+        <section id="Playing">
+            <h1>Live Games</h1>
             <div>
                 <h3>Team1 - Team2</h3>
                 <h4>Score : Score</h4>
@@ -41,8 +42,8 @@
                 <p>Minutes played</p>
             </div>
         </section>
-        <section id="Playing">
-            <h1>Last played</h1>
+        <section id="Games">
+            <h1>Last Played Games</h1>
             <div>
                 <h3>Team1 - Team2</h3>
                 <h4>Score : Score</h4>
@@ -60,7 +61,7 @@
             </div>
         </section>
         <section id="Upcoming">
-            <h1>Last played</h1>
+            <h1>Upcoming Games</h1>
             <div>
                 <h3>Team1 - Team2</h3>
                 <h4>Score : Score</h4>
@@ -77,6 +78,7 @@
                 <p>Minutes played</p>
             </div>
         </section>
+        
     </article>
 </body>
 </html>
