--- a/Project/gamePredicition.html
+++ b/Project/gamePredicition.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Couch Betting - Game Predicition</title>
+    <title>Couch Betting - Betting</title>
 </head>
 <body>
     <nav>
@@ -15,7 +15,7 @@
             <li class="navSpace"><a class="navText" href="games.html">Games</a></li>
             <li class="navSpace"><a class="navText" href="news.html">News</a></li> 
             <li class="navSpace"><a class="navText" href="fantasyLeauge.html">Fantasy Leauge</a></li>
-            <li class="navSpace"><a class="navText" href="gamePredicition.html">Game Predicitions</a></li>
+            <li class="navSpace"><a class="navText" href="gamePredicition.html">Betting</a></li>
             <li class="navSpace"><a class="navText" href="aboutus.html">About Us</a></li>
             <li class="navSpaceRightBound"><a id="signup" href="login.html">Sign Up</a></li>
             <li class="navSpaceRightBound"><a id="login" href="signup.html">Login</a></li>
