changed the Games page to our new design

--- a/Project/games.html
+++ b/Project/games.html
@@ -25,57 +25,67 @@
     <article id="gridGames">
         
         <section id="Playing">
-            <h1>Live Games</h1>
+            <h3>Live Games</h3>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
         </section>
         <section id="Games">
             <h1>Last Played Games</h1>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
+                <p>Minutes played</p>
+            </div>
+            <div>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
                 <p>Minutes played</p>
             </div>
         </section>
         <section id="Upcoming">
-            <h1>Upcoming Games</h1>
+            <h3>Upcoming Games</h3>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
-                <p>Minutes played</p>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
+                <p>Date</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
-                <p>Minutes played</p>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
+                <p>Date</p>
             </div>
             <div>
-                <h3>Team1 - Team2</h3>
-                <h4>Score : Score</h4>
-                <p>Minutes played</p>
+                <h4>Team1 - Team2</h4>
+                <h5>Score : Score</h5>
+                <p>Date</p>
             </div>
         </section>
         
