--- a/Project/aboutus.html
+++ b/Project/aboutus.html
@@ -9,7 +9,7 @@
     <title>Couch Betting - About Us</title>
 </head>
 <body>
-    <nav>
+    <nav id="nav-position">
         <ul id="ulNav">
             <li class="navSpace"><a class="navText" href="index.html">Home</a></li>
             <li class="navSpace"><a class="navText" href="games.html">Games</a></li>
